crates/diffguard-core/src/snapshots/diffguard_core__sarif__tests__snapshot_sarif_info_findings.snap
---
source: crates/diffguard-core/src/sarif.rs
expression: json
---
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/master/Schemata/sarif-schema-2.1.0.json",
  "version": "2.1.0",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "diffguard",
          "version": "0.1.0",
          "informationUri": "https://github.com/effortlessmetrics/diffguard",
          "rules": [
            {
              "id": "info.todo",
              "shortDescription": {
                "text": "Found a TODO comment."
              },
              "defaultConfiguration": {
                "level": "note"
              }
            }
          ]
        }
      },
      "results": [
        {
          "ruleId": "info.todo",
          "level": "note",
          "message": {
            "text": "Found a TODO comment."
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "src/lib.rs",
                  "uriBaseId": "%SRCROOT%"
                },
                "region": {
                  "startLine": 5,
                  "snippet": {
                    "text": "// TODO: refactor this"
                  }
                }
              }
            }
          ],
          "partialFingerprints": {
            "primaryLocationLineHash": "info.todo:src/lib.rs:5"
          }
        }
      ]
    }
  ]
}
