crates/diffguard-core/src/snapshots/diffguard_core__sarif__tests__snapshot_sarif_no_findings.snap
---
source: crates/diffguard-core/src/sarif.rs
expression: json
---
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/master/Schemata/sarif-schema-2.1.0.json",
  "version": "2.1.0",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "diffguard",
          "version": "0.1.0",
          "informationUri": "https://github.com/effortless-mgmt/diffguard"
        }
      },
      "results": []
    }
  ]
}
